# npg-irods-python

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  logging.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  style.css  test-requirements.txt
.github/workflows/: build-image.yml  create-release.yml  run-tests.yml
docker/: docker-entrypoint.sh  install_pyenv.sh
docs/decisions/: README.md  adr-01-publish-directory-removes-public-permissions-by-default.md
misc/: illumina_locations_backfill_prep.md
scripts/: apply-ont-metadata  backfill_illumina_locations.py  backfill_pacbio_ids  check-checksums  check-common-metadata  check-consent-withdrawn  check-data-object-checksums  check-replicas  copy-confirm  locate-data-objects  repair-checksums  repair-common-metadata  repair-data-object-checksums  repair-replicas  safe-remove-script  update-ont-metadata  update-secondary-metadata  withdraw-consent
src/npg_irods/: __init__.py  checksum.py  cli.py  common.py  exception.py  fluidigm.py  functions.py  html_reports.py  illumina.py  ont.py  pacbio.py  publish.py  sequenom.py  utilities.py  utilties.py  version.py  xenium.py
src/npg_irods/cli/: __init__.py  apply_general_study_metadata.py  apply_ont_metadata.py  check_checksums.py  check_common_metadata.py  check_consent_withdrawn.py  check_replicas.py  checksum_directory.py  copy_confirm.py  enhance_secondary_metadata.py  locate_data_objects.py  publish_directory.py  publish_xenium_results.py  repair_checksums.py  repair_common_metadata.py  repair_replicas.py  safe_remove_script.py  update_secondary_metadata.py  update_uuid_lims_metadata.py  util.py  withdraw_consent.py  write_html_report.py
src/npg_irods/db/: __init__.py  mlwh.py  mlwh_cache.py
src/npg_irods/metadata/: __init__.py  common.py  illumina.py  infinium.py  lims.py  ont.py  pacbio.py  xenium.py
src/npg_irods/mlwh_locations/: illumina.py  pacbio.py  writer.py
src/npg_irods/resources/: style.css
tests/: conftest.py  test_api.py  test_checksum.py  test_common.py  test_functions.py  test_illumina.py  test_illumina_backfill.py  test_lims.py  test_locate_data_objects.py  test_metadata.py  test_ml_warehouse_queries.py  test_ont.py  test_pacbio.py  test_publish.py  test_publish_directory.py  test_utilities.py  testdb.ini
tests/data/: logging_syslog.conf
tests/data/illumina/synthetic/12345/: 12345#0.cram  12345#1.bam  12345#1.composition.json  12345#1.cram  12345#1.vcf  12345#1_human.composition.json  12345#1_human.vcf  12345#1_phix.composition.json  12345#1_xahuman.composition.json  12345#1_xahuman.cram  12345#1_xahuman.vcf  12345#1_yhuman.composition.json  12345#2.composition.json  12345#2.cram  12345#2.vcf  12345#888.cram  12345.cram  12345.vcf
tests/data/illumina/synthetic/12345/cellranger/: 12345.cram
tests/data/illumina/synthetic/54321/: 54321#1.bam
tests/data/illumina/synthetic/67890/: 67890#1.cram
tests/data/ont/synthetic/old_rebasecalled_multiplexed_experiment_001/20190904_1514_GA10000_flowcell201_b4a1fd79/: barcoding_summary.txt  report_experiment_001.html  sequencing_summary.txt
tests/data/ont/synthetic/old_rebasecalled_multiplexed_experiment_001/20190904_1514_GA10000_flowcell201_cf751ba1/: barcoding_summary.txt  report_experiment_001.html  sequencing_summary.txt
tests/data/ont/synthetic/rebasecalled_multiplexed_experiment_001/20190904_1514_GA10000_flowcell301_08c179cd/: report_experiment_001.html  sequencing_summary.txt
tests/data/ont/synthetic/rebasecalled_multiplexed_experiment_001/20190904_1514_GA10000_flowcell301_08c179cd/qc/: base_count.json  (+1 more)
tests/data/ont/synthetic/rebasecalled_multiplexed_experiment_001/20190904_1514_GA10000_flowcell301_cf751ba1/: report_experiment_001.html  sequencing_summary.txt
tests/data/pacbio/: backfill.json  duplicates.json  no_duplicates.json
tests/data/pacbio/synthetic/r12345_20246789_98765/1_A01/: m12345_246789_987655_s3.fail_reads.bc1000.bam  m12345_246789_987655_s3.fail_reads.bc1000.bam.pbi  m12345_246789_987655_s3.fail_reads.bc1000.consensusreadset.xml  m12345_246789_987655_s3.fail_reads.consensusreadset.xml  m12345_246789_987655_s3.fail_reads.unassigned.bam  m12345_246789_987655_s3.fail_reads.unassigned.bam.pbi  m12345_246789_987655_s3.fail_reads.unassigned.consensusreadset.xml  m12345_246789_987655_s3.hifi_reads.bc1000.bam  m12345_246789_987655_s3.hifi_reads.bc1000.bam.pbi  m12345_246789_987655_s3.hifi_reads.bc1000.consensusreadset.xml  m12345_246789_987655_s3.hifi_reads.consensusreadset.xml  m12345_246789_987655_s3.hifi_reads.unassigned.bam  m12345_246789_987655_s3.hifi_reads.unassigned.bam.pbi  m12345_246789_987655_s3.hifi_reads.unassigned.consensusreadset.xml  m12345_246789_987655_s3.primary_qc.tar.xz  m12345_246789_987655_s3.sts.xml
tests/data/simple/collection/: a.txt
tests/data/simple/collection/sub/: b.txt
tests/data/tree/: x.txt  y.txt  z.txt
tests/data/tree/a/: h.txt  i.txt  j.txt
tests/data/tree/a/m/: w.txt
tests/data/tree/a/n/: x.txt
tests/data/tree/a/o/: y.txt
tests/data/tree/b/p/: w.txt
tests/data/tree/b/q/: x.txt
tests/data/tree/b/r/: z.txt
tests/data/ultima/: README.md
tests/data/ultima/minimal/: 000001_a.txt  000001_a.txt.md5  b.txt  b.txt.md5
tests/data/ultima/minimal/000001-a/: 000002-c.txt  000002-c.txt.md5
tests/data/ultima/minimal/000001-d/: 000001-d.txt
tests/data/xenium/synthetic/output-XETG00000__0000000__synthetic_region_001__20000101__000000/: .end-of-run  analysis_summary.html  cell_boundaries.parquet  cell_feature_matrix.h5  cells.parquet  experiment.xenium  gene_panel.json  metrics_summary.csv  morphology.ome.tif  nucleus_boundaries.parquet  transcripts.parquet
tests/helpers/: __init__.py
tests/illumina/: conftest.py  test_backfill.py  test_locate_data_objects.py  test_metadata_update.py  test_mlwh_queries.py
tests/ont/: __init__.py  conftest.py  test_html_reports.py  test_metadata_update.py  test_mlwh_queries.py
tests/pacbio/: __init__.py  conftest.py  test_metadata_update.py  test_mlwh_paths.py  test_mlwh_queries.py  test_product_id.py
tests/xenium/: test_publish.py
(+142 files in other folders)
