[project]
name = "npg-irods-python"
description = "NPG iRODS data management tools."
license = { file = "LICENSE", content-type = "text/plain" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Keith James", email = "kdj@sanger.ac.uk" },
    { name = "Michael Kubiak", email = "mk35@sanger.ac.uk" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python"
]
keywords = ["irods", "npg"]
requires-python = ">=3.12"

dynamic = ["version"]

dependencies = [
    "npg-python-lib >= 1.0.0,<2",
    "npg_id_generation >=5.0.1",
    "partisan >=3.1.3",
    "pymysql >=1.1.1",
    "python-dateutil >=2.9.0,<3",
    "rich >=13.6.0",
    "sqlalchemy >=2.0.33",
    "structlog >=23.3.0",
    "yattag"
]

[project.optional-dependencies]
test = [
    "black >=24.3.0,<26",
    "pytest >=8.0,<9",
    "sqlalchemy-utils >=0.41.0",
]

[project.urls]
homepage = "https://github.com/wtsi-npg/npg-irods-python"
repository = "https://github.com/wtsi-npg/npg-irods-python.git"

[project.scripts]
"apply-ont-metadata" = "npg_irods.cli.apply_ont_metadata:main"
"check-checksums" = "npg_irods.cli.check_checksums:main"
"check-common-metadata" = "npg_irods.cli.check_common_metadata:main"
"check-consent-withdrawn" = "npg_irods.cli.check_consent_withdrawn:main"
"check-replicas" = "npg_irods.cli.check_replicas:main"
"copy-confirm" = "npg_irods.cli.copy_confirm:main"
"locate-data-objects" = "npg_irods.cli.locate_data_objects:main"
"publish-directory" = "npg_irods.cli.publish_directory:main"
"repair-common-metadata" = "npg_irods.cli.repair_common_metadata:main"
"repair-checksums" = "npg_irods.cli.repair_checksums:main"
"repair-replicas" = "npg_irods.cli.repair_replicas:main"
"safe-remove-script" = "npg_irods.cli.safe_remove_script:main"
"update-secondary-metadata" = "npg_irods.cli.update_secondary_metadata:main"
"withdraw-consent" = "npg_irods.cli.withdraw_consent:main"
"write-html-report" = "npg_irods.cli.write_html_report:main"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Note: we are relying on setuptools' automatic package discovery, so no further
# configuration is required. This is possible because npg-irods-python uses a standard
# src layout. See the following for more information:
#
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout

# The script-files is key deprecated, but there is currently no alternative for
# installing regular scripts. The setuptools documentation says to use
# "project.scripts", but that only supports automatcially generating wrapper scripts
# for entry points, not installing existing scripts.
script-files = [
    "scripts/backfill_illumina_locations.py",
    "scripts/backfill_pacbio_ids",
]

[tool.setuptools.package-data]
"*" = ["*.css"]

[tool.setuptools-git-versioning]
enabled = true
